[gd_scene load_steps=13 format=3 uid="uid://btvm8a1o0uy3i"]

[ext_resource type="Script" path="res://Scenes/Templates/Elite.gd" id="1_gpihu"]
[ext_resource type="PackedScene" uid="uid://0rfheeo0r2lh" path="res://Scenes/Components/health_component.tscn" id="2_c2bac"]
[ext_resource type="Texture2D" uid="uid://mcy5lf64s8bm" path="res://Art/Ugly_Bastard.png" id="3_isobn"]
[ext_resource type="PackedScene" uid="uid://cusqbl0whlfcq" path="res://Scenes/Components/hurtbox_component.tscn" id="4_gt6aw"]
[ext_resource type="Script" path="res://Scripts/health_label.gd" id="5_1htey"]
[ext_resource type="Script" path="res://Scripts/Components/HitboxComponent.gd" id="6_y2ds4"]
[ext_resource type="AudioStream" uid="uid://bi1emnk3s4lmt" path="res://Music/enemy_hurt.mp3" id="7_x0apn"]

[sub_resource type="SpriteFrames" id="SpriteFrames_7edif"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_isobn")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_4d5c5"]
radius = 107.005

[sub_resource type="CircleShape2D" id="CircleShape2D_g1luh"]
radius = 17.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ek72t"]
size = Vector2(9, 6)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_tmxa4"]
radius = 21.0
height = 64.0

[node name="Elite" type="CharacterBody2D"]
collision_layer = 0
collision_mask = 3
script = ExtResource("1_gpihu")

[node name="HealthComponent" parent="." instance=ExtResource("2_c2bac")]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
y_sort_enabled = true
position = Vector2(0, -4)
scale = Vector2(0.105, 0.105)
sprite_frames = SubResource("SpriteFrames_7edif")

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_4d5c5")

[node name="HurtboxComponent2" parent="." instance=ExtResource("4_gt6aw")]
position = Vector2(0, -1)
collision_layer = 0
priority = 1

[node name="Hitbox" type="CollisionShape2D" parent="HurtboxComponent2"]
shape = SubResource("CircleShape2D_g1luh")

[node name="Hitbox" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_ek72t")

[node name="DashTimer" type="Timer" parent="."]

[node name="Label" type="Label" parent="." node_paths=PackedStringArray("health_component")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -3.0
offset_top = 27.0
offset_right = 9.0
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.494843)
theme_override_font_sizes/font_size = 20
text = "5"
horizontal_alignment = 1
script = ExtResource("5_1htey")
health_component = NodePath("../HealthComponent")

[node name="HitboxComponent" parent="." node_paths=PackedStringArray("health_component", "interaction_sound") instance=ExtResource("4_gt6aw")]
position = Vector2(0, -1)
collision_layer = 4
collision_mask = 17
priority = 1
script = ExtResource("6_y2ds4")
health_component = NodePath("../HealthComponent")
interaction_sound = NodePath("AudioStreamPlayer2D")

[node name="Hurtbox" type="CollisionShape2D" parent="HitboxComponent"]
shape = SubResource("CapsuleShape2D_tmxa4")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="HitboxComponent"]
stream = ExtResource("7_x0apn")

[connection signal="died" from="HealthComponent" to="." method="_on_health_component_died"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_area_2d_body_exited"]
